--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
     <h2>Analysis: grouping similar records</h2>
   </hgroup>
   <article data-timings="">
-    <p>Grouping reads with max &quot;distance&quot; of 9 mismatches and gaps gives 1662 clusters</p>
+    <p>Grouping reads with up to 9 mismatches/gaps apart (hamming distance) gives 1662 clusters</p>
+
 
 <p>Cluster density diminishes slowly from center to periphery:</p>
 
@@ -361,7 +362,7 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
  "min":      0,
 "max":     11,
 "numticks":     11,
-"title": "distance from center" 
+"title": "Hamming distance" 
 },
 "y": {
  "title": "" 
