--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     src="../libraries/frameworks/io2012/js/require-1.0.8.min.js">
   </script>
   
+  <script src="../libraries/widgets/nvd3/js/jquery-1.8.2.min.js"></script>
+<script src="../libraries/widgets/nvd3/js/d3.v3.min.js"></script>
+<script src="../libraries/widgets/nvd3/js/nv.d3.min-new.js"></script>
+<script src="../libraries/widgets/nvd3/js/fisheye.js"></script>
+
 
 </head>
 <body style="opacity: 0">
@@ -396,7 +401,6 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 
 <p>I de-multiplex the data by clustering reads with 10 consecutive matches within 15 symbol-wide window in the beginning of every sequence
 (<a href="https://github.com/koskot77/sophia/blob/master/barcodes.cc">barcodes.cc</a>); that yields 4 clusters:</p>
-
 
 <table><thead>
 <tr>
