--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <link rel=stylesheet href="../libraries/widgets/nvd3/css/rNVD3.css"></link>
 
   
-<script src="../libraries/widgets/polycharts/js/polychart2.standalone.js"></script>
   <!-- Grab CDN jQuery, fall back to local if offline -->
   <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js"></script>
   <script>window.jQuery || document.write('<script src="../libraries/widgets/quiz/js/jquery.js"><\/script>')</script> 
@@ -29,6 +28,7 @@
 <script src="../libraries/widgets/nvd3/js/d3.v3.min.js"></script>
 <script src="../libraries/widgets/nvd3/js/nv.d3.min-new.js"></script>
 <script src="../libraries/widgets/nvd3/js/fisheye.js"></script>
+<script src="../libraries/widgets/polycharts/js/polychart2.standalone.js"></script>
 
 
 </head>
@@ -42,6 +42,9 @@
     <h2></h2>
     <p>Khristian Kotov<br/></p>
   </hgroup>
+    <a href="https://github.com/kkotov/talks/zipball/gh-pages" class="example">
+     Download
+    </a>
   <article></article>  
 </slide>
     
