--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     media="only screen and (max-device-width: 480px)" >
   <link rel="stylesheet" href="../DevDataProducts/libraries/frameworks/io2012/css/slidify.css" >
   <link rel="stylesheet" href="../DevDataProducts/libraries/highlighters/highlight.js/css/tomorrow.css" />
-  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  <link rel=stylesheet href="../DevDataProducts/libraries/widgets/nvd3/css/nv.d3.css"></link>
-<link rel=stylesheet href="../DevDataProducts/libraries/widgets/nvd3/css/rNVD3.css"></link>
-
+  <base target="_blank"> <!-- This amazingness opens all links in a new tab. -->  
   
-<script src="../DevDataProducts/libraries/widgets/polycharts/js/polychart2.standalone.js"></script>
+  <script src="../DevDataProducts/libraries/widgets/polycharts/js/polychart2.standalone.js"></script>
   <!-- Grab CDN jQuery, fall back to local if offline -->
   <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js"></script>
   <script>window.jQuery || document.write('<script src="../DevDataProducts/libraries/widgets/quiz/js/jquery.js"><\/script>')</script> 
@@ -25,10 +23,6 @@
     src="../DevDataProducts/libraries/frameworks/io2012/js/require-1.0.8.min.js">
   </script>
   
-  <script src="../DevDataProducts/libraries/widgets/nvd3/js/jquery-1.8.2.min.js"></script>
-<script src="../DevDataProducts/libraries/widgets/nvd3/js/d3.v3.min.js"></script>
-<script src="../DevDataProducts/libraries/widgets/nvd3/js/nv.d3.min-new.js"></script>
-<script src="../DevDataProducts/libraries/widgets/nvd3/js/fisheye.js"></script>
 
 
 </head>
@@ -222,13 +216,12 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
   <article data-timings="">
     <p>To warm up, let&#39;s count number of unique patterns of a certain length \(L\) found in data:</p>
 
-<p><center></p>
+<div align="center">
 
-<div id = 'chart18cf2a1773b5' class = 'rChart polycharts'></div>
-
+<div id = 'chart67d25aafc84e' class = 'rChart polycharts'></div>
 <script type='text/javascript'>
     var chartParams = {
- "dom": "chart18cf2a1773b5",
+ "dom": "chart67d25aafc84e",
 "width":    850,
 "height":    350,
 "layers": [
@@ -258,15 +251,16 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 },
 "coord": [],
 "title": "log2(# of unique patterns)",
-"id": "chart18cf2a1773b5" 
+"id": "chart67d25aafc84e" 
 }
     _.each(chartParams.layers, function(el){
         el.data = polyjs.data(el.data)
     })
-    var graph_chart18cf2a1773b5 = polyjs.chart(chartParams);
+    var graph_chart67d25aafc84e = polyjs.chart(chartParams);
 </script>
+</div>
 
-<p></center></p>
+<br>
 
 <p>Number of unique combinations of the 4 letters grows as \(4^L\) until \(L\)~10 where it slows</p>
 
@@ -338,13 +332,12 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 
 <p>Cluster density diminishes slowly from center to periphery:</p>
 
-<p><center></p>
+<div align="center">
 
-<div id = 'chart435030bc2e09' class = 'rChart polycharts'></div>
-
+<div id = 'chart67d27843517d' class = 'rChart polycharts'></div>
 <script type='text/javascript'>
     var chartParams = {
- "dom": "chart435030bc2e09",
+ "dom": "chart67d27843517d",
 "width":    850,
 "height":    300,
 "layers": [
@@ -374,15 +367,14 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 },
 "coord": [],
 "title": "Cluster profile (summed up for all clusters)",
-"id": "chart435030bc2e09" 
+"id": "chart67d27843517d" 
 }
     _.each(chartParams.layers, function(el){
         el.data = polyjs.data(el.data)
     })
-    var graph_chart435030bc2e09 = polyjs.chart(chartParams);
+    var graph_chart67d27843517d = polyjs.chart(chartParams);
 </script>
-
-<p></center></p>
+</div>
 
 <p>Excess in bin #10 suggests that clustering with such cutoff merges some fine-scale structure</p>
 
