--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 
 <div align="center">
 
-<div id = 'chart75a05deee6a9' class = 'rChart polycharts'></div>
+<div id = 'chart766a4a524109' class = 'rChart polycharts'></div>
 <script type='text/javascript'>
     var chartParams = {
- "dom": "chart75a05deee6a9",
+ "dom": "chart766a4a524109",
 "width":    850,
 "height":    350,
 "layers": [
@@ -251,12 +251,12 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 },
 "coord": [],
 "title": "log2(# of unique patterns)",
-"id": "chart75a05deee6a9" 
+"id": "chart766a4a524109" 
 }
     _.each(chartParams.layers, function(el){
         el.data = polyjs.data(el.data)
     })
-    var graph_chart75a05deee6a9 = polyjs.chart(chartParams);
+    var graph_chart766a4a524109 = polyjs.chart(chartParams);
 </script>
 </div>
 
@@ -332,10 +332,10 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 
 <div align="center">
 
-<div id = 'chart75a06e1c6857' class = 'rChart polycharts'></div>
+<div id = 'chart766a625328c9' class = 'rChart polycharts'></div>
 <script type='text/javascript'>
     var chartParams = {
- "dom": "chart75a06e1c6857",
+ "dom": "chart766a625328c9",
 "width":    850,
 "height":    300,
 "layers": [
@@ -365,12 +365,12 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 },
 "coord": [],
 "title": "Cluster profile (summed up for all clusters)",
-"id": "chart75a06e1c6857" 
+"id": "chart766a625328c9" 
 }
     _.each(chartParams.layers, function(el){
         el.data = polyjs.data(el.data)
     })
-    var graph_chart75a06e1c6857 = polyjs.chart(chartParams);
+    var graph_chart766a625328c9 = polyjs.chart(chartParams);
 </script>
 </div>
 
@@ -424,7 +424,9 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 </tr>
 </tbody></table>
 
-<p>(<code>.{0,2}</code> prefix allows any 0, 1, or 2 symbols in the beginning of a barcode) &lt;!--, usually #1 and #3 start with <code>C</code> and #2 and #4 with &#39;A&#39;)--&gt;</p>
+<p>(<code>.{0,2}</code> prefix allows any 0, 1, or 2 symbols in the beginning of a barcode)</p>
+
+<!--, usually #1 and #3 start with `C` and #2 and #4 with 'A')-->
 
 <p>Only about 0.5K reads are left out of these 4 major clusters</p>
 
