--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ IIIIIIIIIHEEEHIG;<8;DIIIIG>43;//1111?9IIIIII?;66111?13?88??I???DDFFIH?<<>DIIIFDB
 
 <!-- rs206076 and rs206080 are not in #3 and rs3092994 is not in #4 -->
 
-<p>The four barcodes identify four different individuals (check homo/heterozygosity of the variants)</p>
+<p>The four barcodes identify four different individuals (check variants' homo/heterozygosity)</p>
 
   </article>
   <!-- Presenter Notes -->
