--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- LOGO SLIDE -->
         <slide class="title-slide segue nobackground">
   <hgroup class="auto-fadein">
-    <h1>&quot;Some&quot; NSG analysis</h1>
+    <h1>&quot;Some&quot; NGS analysis</h1>
     <h2></h2>
     <p>Khristian Kotov<br/></p>
   </hgroup>
